[package]
name = "apollo-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
colorize = "0.1.0"
directories = "6.0.0"
inquire = "0.7.5"
prettytable-rs = "0.10.0"
regex = "1.11.2"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
url = "2.5.4"
[dependencies.rusqlite]
version = "0.31"
features = ["bundled"]
